--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
       <artifactId>postgresql</artifactId>
       <version>42.5.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>6.1.6.Final</version>
+      <type>pom</type>
+    </dependency>
 
   </dependencies>
   <build>
