iteration need to be fixed

--- a/src/main/resources/Application.properties
+++ b/src/main/resources/Application.properties
@@ -1,7 +1,6 @@
-
-spring.mustache.charset=utf-8
 server.port = 5432
 spring.datasource.url=jdbc:postgresql://localhost:8080/menu
 spring.datasource.username=root
 spring.datasource.password=123
 spring.jpa.generate-ddl=true
+spring.freemarker.expose-request-attributes=true
